# TimeWise

./: .gitignore  README.md  files.list
client/: index.html  pnpm-lock.yaml
client/src/Components/: index.ts
client/src/Components/Admin/Panel/: AdminPanel.tsx
client/src/Components/Admin/Usesr/: Users.tsx
client/src/Components/App/: App.tsx
client/src/Components/App/Routing/: Lazy.ts  Router.tsx
client/src/Pages/: index.ts
client/src/Pages/AuthPage/Login/: Login.tsx
client/src/Pages/Landing/: Landing.tsx
client/src/Pages/UserPage/: UserPage.tsx
client/src/Share/: Variables.ts
client/src/Store/: AuthStore.ts
mds/: description.md  iedea.md  tz.md
nginx/sites-available/: mindharmony.ru.conf  timewise.online.conf  timewise.ru.conf_back
server/: .air.toml  .env.example  Cargo.toml  README.md  go.mod
server/cmd/app/: main.go
server/cmd/app/version/: version.go
server/cmd/server/: server.go
server/docs/: README.md  openapi.yaml
server/handlers/: Password.go  events.go  tasks.go  telegram.go  user.go
server/handlers/auth/: auth.go
server/middlewares/: Auth.go  ModeratorMiddleware.go  accessMiddleware.go  authMiddleware.go  enableCORS.go  isAdmin.go
server/migrations/: 20241012090139_create_users_tasks_events.sql
server/models/: user.go
server/pkg/database/: backup.go  db.go
server/pkg/email/: mail.go
server/pkg/jwt/: CreateToken.go  ValidateToken.go
server/routes/: router.go
server/src/: auth.rs  backup.rs  cors.rs  db.rs  events.rs  main.rs  routes.rs  server.rs  tasks.rs  telegram.rs
(+11 files in other folders)
