[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.7.0"
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.0.0"
dotenv = "0.15"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15.0"
futures-util = "0.3"
zip = "0.6"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
anyhow = "1.0"
futures = "0.3"
log = "0.4.22"

[build-dependencies]
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
